// Copyright 2011 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";
package enterprise.secmgr.common;
option java_package = "com.google.enterprise.secmgr.common";

import "acl.proto";

// TODO: Consoliate AuthzStatus with other definitions:
// Decision in acl.proto and AuthzResponseInfo.
// SamlDecision also bears similar values.
enum AuthzStatus {
  INDETERMINATE = 0;
  PERMIT = 1;
  DENY = 2;
}

message AuthzRequest {
  required string subject = 1;  // session id
  optional Mode mode = 2 [default = ALL];
  repeated Resource resource = 3;
  optional string request_id = 4;

  enum Mode {
    ALL = 0;   // Default option, do all type of authorization.
    FAST = 1;  // Do only Cache + ACL checks.
  }

  message Resource {
    required string identifier = 1;          // url
    optional AuthzStatus early_decision = 2; // decision is part of acl below.
    optional enterprise.supergsa.security.GsaAcl acl = 1001;  // to be removed in the near future
  }
}

message AuthzResponse {
  repeated Resource resource = 1;

  message Resource {
    required string identifier = 1;          // url
    required AuthzStatus decision = 2;
  }
}
